--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/wbdv_sp21_01_schema?serverTimezone=UTC
-spring.datasource.username=YOUR_USERNAME
-spring.datasource.password=YOUR_PASSWORD
+# Local: spring.datasource.url=jdbc:mysql://localhost:3306/wbdv_sp21_01_schema?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://dyswf7sb6fyb7ys8:o2ppo1f1xqiaqpnx@td5l74lo6615qq42.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ebbi0ydmt8k0ow40
+# Local: spring.datasource.username=YOUR_USERNAME
+spring.datasource.username=dyswf7sb6fyb7ys8
+# Local: spring.datasource.password=YOUR_PASSWORD
+spring.datasource.password=o2ppo1f1xqiaqpnx
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
